--- a/src/main/resources/application-db.yml
+++ b/src/main/resources/application-db.yml
@@ -55,9 +55,16 @@ spring:
   #    database-platform: org.hibernate.dialect.MySQLDialect
   #    hibernate:
   #      ddl-auto: create
+  jpa:
+    #전송 쿼리 확인
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+    # 테이블 생성 후에 data.sql 실행
+    defer-datasource-initialization: true
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://clothstar-v82.cpmu4ewuelxk.ap-northeast-2.rds.amazonaws.com/clothstar82
     username: admin
     password: clothstar010101
-
