--- a/src/main/resources/application-db.yml
+++ b/src/main/resources/application-db.yml
@@ -63,6 +63,6 @@ spring:
         format_sql: true
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://clothstar-v82.cpmu4ewuelxk.ap-northeast-2.rds.amazonaws.com/clothstar82
-    username: admin
-    password: clothstar010101
+    url: ${DB_URL}
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
