chore: Mybatis, JPA profiles 설정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,14 @@
 spring:
   profiles:
     active:
-      - local
+      - local, mybatis
     group:
       local:
         - db-local
+        - db-local-mybatis  # 또는 db-local-jpa
       dev:
         - db-dev
+        - db-dev-mybatis  # 또는 db-dev-jpa
     include:
       - db
 
