--- a/build.gradle
+++ b/build.gradle
@@ -48,13 +48,9 @@ dependencies {
     annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
     annotationProcessor "jakarta.annotation:jakarta.annotation-api"
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
-    sourceSets {
-        main {
-            java {
-                srcDirs = ["$projectDir/src/main/java", "$projectDir/build/generated"]
-            }
-        }
-    }
+
+    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 }
 
 tasks.named('test') {
