--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -4,6 +4,11 @@ spring:
     username: sa
     password:
     driver-class-name: org.h2.Driver
+    p6spy:
+      enabled: true
+      appender: com.p6spy.engine.spy.appender.Slf4JLogger
+      logMessageFormat:
+        p6spy: "%(currentTime)|%(executionTime)|%(category)|%(sqlSingleLine)"
 
   jpa:
     hibernate:
@@ -11,6 +16,7 @@ spring:
     properties:
       hibernate:
         format_sql: true # log
+        show_sql: true
 
 logging.level:
   org.hibernate.SQL: debug
