--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }} # 등록한 Github Secret이 자동으로 불려온다.
           aws-region: ap-northeast-2
       - name: Upload to S3
-        run: aws s3 cp --region ap-northeast-2 ./practice-deploy.zip s3://$S3_BUCKET_NAME/practice-deploy.zip
+        run: aws s3 cp --region ap-northeast-2 ./ZIP_FILE_NAME s3://$S3_BUCKET_NAME/ZIP_FILE_NAME
       - name: Code Deploy
         run: >
           aws deploy create-deployment --application-name $CODE_DEPLOY_APP_NAME
