--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,4 +18,5 @@ springdoc:
   swagger-ui:
     operations-sorter: method # operations 정렬 방식은 HTTP Method 순
     tags-sorter: alpha # tag 정렬 방식은 알파벳 순
-    path: "swagger.html" # http://localhost:8080/swagger.html로 접속 가능
+    #path: "swagger.html" # http://localhost:8080/swagger.html로 접속 가능
+    path: "/" # http://localhost:8080로 접속 가능
