--- a/build.gradle
+++ b/build.gradle
@@ -52,9 +52,13 @@ dependencies {
     annotationProcessor "jakarta.annotation:jakarta.annotation-api"
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
-    // P6Spy 의존성 추가(쿼리문 로그 파라미터 ? 값 바인드)
+    // P6Spy 의존성 추가(쿼리문 로그 파라미터 ? 값 바인드 역할로 보안에 취약해서 test-yml 에서만 사용할것)
     implementation 'p6spy:p6spy:3.9.1'
     implementation 'com.github.gavlyukovskiy:datasource-decorator-spring-boot-autoconfigure:1.9.0'
+
+    //yml 암호화, 공식문서: https://github.com/ulisesbocchio/jasypt-spring-boot
+    //참고 블로그: https://velog.io/@bey1548/SpringBoot-application.yml-%EA%B0%92-%EC%95%94%ED%98%B8%ED%99%94%ED%95%98%EA%B8%B0jasypt
+    implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.5'
 }
 
 tasks.named('test') {
