refactor: 상품 리스트 조회 jpa 1차 N+1 해결
- batch_size 설정
- fetchJoin 적용

--- a/src/main/resources/application-db.yml
+++ b/src/main/resources/application-db.yml
@@ -96,6 +96,10 @@ spring:
   jpa:
     show-sql: true
     database-platform: H2
+    properties:
+      hibernate:
+        format_sql: true
+        default_batch_fetch_size: 100
 #    hibernate:
 #      ddl-auto: create
 
@@ -131,5 +135,9 @@ spring:
   jpa:
     show-sql: true
     database-platform: org.hibernate.dialect.MySQLDialect
+    properties:
+      hibernate:
+        format_sql: true
+        default_batch_fetch_size: 100
 #    hibernate:
 #      ddl-auto: create
