--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,7 @@
+jasypt:
+  encryptor:
+    bean: jasyptStringEncryptor
+
 spring:
   profiles:
     active:
@@ -9,6 +13,17 @@ spring:
         - db-dev
     include:
       - db
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: ENC(kGXTSlfxUWNbRoGuBwNRTJBETjMz04AChYMrwDeY3Cs=)
+    password: ENC(/hOuHdVpOgyzKrlqyayORlsTFpIrwe7RYnfAqXEFzIk=)
+    properties:
+      mail.smtp:
+        auth: true
+        enable: true
+
+email.send: ENC(kGXTSlfxUWNbRoGuBwNRTJBETjMz04AChYMrwDeY3Cs=)
 
 springdoc:
   default-consumes-media-type: application/json # 소비 미디어 타입
