feat: RepositoryConfig yml설정 및 log 추가

--- a/src/main/resources/application-db.yml
+++ b/src/main/resources/application-db.yml
@@ -11,6 +11,9 @@
 #  init:
 #    mode: always
 
+app:
+  repository:
+    type: jpa
 mybatis:
   mapper-locations: classpath:/mappers/**.xml
   config-location: classpath:/config/mybatis-config.xml
