--- a/src/main/resources/application-db.yml
+++ b/src/main/resources/application-db.yml
@@ -13,7 +13,7 @@
 
 app:
   repository:
-    type: jpa
+    type: mybatis
 mybatis:
   mapper-locations: classpath:/mappers/**.xml
   config-location: classpath:/config/mybatis-config.xml
