--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,13 @@ dependencies {
 
     annotationProcessor "jakarta.annotation:jakarta.annotation-api"
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+    sourceSets {
+        main {
+            java {
+                srcDirs = ["$projectDir/src/main/java", "$projectDir/build/generated"]
+            }
+        }
+    }
 
     // P6Spy 의존성 추가(쿼리문 로그 파라미터 ? 값 바인드 역할로 보안에 취약해서 test-yml 에서만 사용할것)
     implementation 'p6spy:p6spy:3.9.1'
