feat: redis 회원가입 완료

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,6 +29,7 @@ spring:
     redis:
       host: localhost
       port: 6379
+      duration: 600
 
 email.send: ENC(kGXTSlfxUWNbRoGuBwNRTJBETjMz04AChYMrwDeY3Cs=)
 
