test: 회원가입 redis 인증 test code 작성

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,7 +27,7 @@ spring:
   # Redis
   data:
     redis:
-      host: localhost
+      host: ENC(GUuFDW7HjE98e7N28Vkb/xoIEgLeOCb5)
       port: 6379
       duration: 600
 
