refactor: 페이지네이션 N+1을 해결하기 위한 default_batch_fetch_size 설정

--- a/src/main/resources/application-db.yml
+++ b/src/main/resources/application-db.yml
@@ -27,8 +27,9 @@ jwt:
 
 spring:
   jpa:
-    hibernate:
-      default_batch_fetch_size: 100
+    properties:
+      hibernate:
+        default_batch_fetch_size: 1000
 
 --- # local 공통 설정
 spring:
