--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -1,6 +1,7 @@
 spring:
   datasource:
     url: jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE # h2 support in-memory-db
+    #    url: jdbc:h2:tcp://localhost/~/clothstar2 # h2 support in-memory-db
     username: sa
     password:
     driver-class-name: org.h2.Driver
